# Sentiment-Analysis

./: README.md  pyproject.toml
src/backend/: main.py
src/frontend/: main.py
src/pipeline/: pipeline_module.py
